--- a/client/src/components/layerCake/layerCake.scss
+++ b/client/src/components/layerCake/layerCake.scss
@@ -52,3 +52,8 @@
 .ec-editor-layer-cake-active{
     display: none;
 }
+.ec-editor-layer-cake-content img{
+    width: 11px;
+    height: 13px;
+    margin-right: 6px;
+}
