--- a/client/src/components/menu/app.scss
+++ b/client/src/components/menu/app.scss
@@ -4,12 +4,12 @@ $padding: 20px;
     position: fixed;
     left: 0;
     bottom: 0;
-    background-color: #31364a;
     height: 50px;
     line-height: 50px;
     display: inline-block;
     z-index: 9999;
     display: block;
+    background-image: url(../../images/1.png);
 }
 .hide{
     display: none;
