--- a/client/src/css/common.scss
+++ b/client/src/css/common.scss
@@ -4,8 +4,8 @@
 .ec-editor-layout-fixed {
     position: fixed;
     padding: 0;
-    background: #fff;
-    box-shadow: 0 0 6px -4px #999;
+    // background: #fff;
+    // box-shadow: 0 0 6px -4px #999;
     transition: all .2s;
     z-index: 888;
     opacity: 0.96;
@@ -18,7 +18,7 @@
         margin-bottom: 15px;
         padding-left: 5px;
         background: #bbb;
-        color: #fff;
+        // color: #fff;
     }
 
     &-main {
