--- a/client/src/components/menu/app.scss
+++ b/client/src/components/menu/app.scss
@@ -10,6 +10,8 @@ $padding: 20px;
     z-index: 9999;
     display: block;
     background-image: url(../../images/1.png);
+    background-size: 100% 100%;
+
 }
 .hide{
     display: none;
