--- a/client/src/components/menu/app.scss
+++ b/client/src/components/menu/app.scss
@@ -5,17 +5,41 @@ $padding: 20px;
     line-height: 50px;
     z-index: 9999;
     display: block;
-    //background-image: url(../../images/1.png);
-    background: #000;
-    width: 194px;
-    height: 300px;
-    left: 74px;
-    bottom: 10px;
+    background: #2D3035;
+    width: 180px;
+    height: 282px;
+    left: 80px;
+    bottom: 20px;
     border-radius: 20px;
     transition: all .4s;
     transform: perspective(600) rotateY(0deg);
     transform-origin: 0 0;
     opacity: .8;
+    .triangle-left {
+        position: absolute;
+        left: -12px;
+        bottom: 30px;
+        z-index: 9999;
+        border-top: 10px solid transparent;
+        border-right: 20px solid #2D3035;
+        border-bottom: 10px solid transparent;
+        opacity: .8;
+    }
+    .ant-btn-sm {
+        width: 120px;
+        height: 56px;
+        font-size: 14px;
+        background: none;
+        border: none;
+        color: #DEDEE0;
+        text-align: left;
+        margin-left: 36px;
+        padding-left: 10px;
+        border-bottom: 1px solid #383737;
+    }
+    .ant-btn-sm:last-child {
+        border-bottom: 0;
+    }
 }
 
 .hide {
