--- a/client/src/pages/editor/edit-module-hack.scss
+++ b/client/src/pages/editor/edit-module-hack.scss
@@ -1,3 +1,6 @@
+/**
+ * mobile 配置
+ */
 
 .pointer-events-disabled {
     pointer-events: none;
@@ -8,5 +11,20 @@
         img, .imgWarp {
             @extend .pointer-events-disabled;
         }
+    }
+}
+
+.ec-editor-mobile {
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    height: 100%;
+
+    .ec-editor-canvas-inner {
+        background: #fff;
+        width: 750px;
+        min-height: 400px;
+        transform-origin: 50% 0;
+        transform: scale(0.5);
+        box-shadow: 0px 0px 12px 0 #666;
     }
 }
