--- a/client/components/mobile/img/img.scss
+++ b/client/components/mobile/img/img.scss
@@ -2,7 +2,8 @@
 .tmc-img {
     box-sizing: border-box;
     overflow: hidden;
-
+    min-height: 30px;
+    border: 1px solid #697177;
     img {
         display: block;
         width: 100%;
