--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -245,5 +245,21 @@ body {
     }
 }
 
+/*滚动条样式*/
+.ec-editor-layer-cake-main::-webkit-scrollbar {/*滚动条整体样式*/
+    width: 6px;     /*高宽分别对应横竖滚动条的尺寸*/
+    height: 4px;
+}
+.ec-editor-layer-cake-main::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    background: rgba(0,0,0,0.3);
+}
+.ec-editor-layer-cake-main::-webkit-scrollbar-track {/*滚动条里面轨道*/
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    border-radius: 0;
+    background: rgba(0,0,0,0.6);
+}
+
 
 
