--- a/client/components/mobile/img/img.scss
+++ b/client/components/mobile/img/img.scss
@@ -4,6 +4,8 @@
     overflow: hidden;
     min-height: 30px;
     border: 1px solid #697177;
+    background: #697177;
+    opacity: .2;
     img {
         display: block;
         width: 100%;
