--- a/client/src/components/control/control.scss
+++ b/client/src/components/control/control.scss
@@ -38,4 +38,18 @@
     &-left {
         left: 0;
     }
+    .edit-tools{
+        width: 60px;
+        height: 24px;
+        background: #697177;
+        position: absolute;
+        right: 0;
+        .anticon-delete,
+        .anticon-copy{
+            width: 50%;
+            line-height: 24px;
+            font-size: 14px;
+            color: #fff;
+        }
+    }
 }
