--- a/client/src/components/menu/app.scss
+++ b/client/src/components/menu/app.scss
@@ -1,6 +1,9 @@
+@import "../../css/common.scss";
+
 $padding: 20px;
 
 .ec-editor-menu {
+    @include bezierAnimate('in-back', 0.4s);
     position: fixed;
     line-height: 50px;
     z-index: 9999;
@@ -11,10 +14,10 @@ $padding: 20px;
     left: 80px;
     bottom: 20px;
     border-radius: 20px;
-    transition: all .4s;
     transform: perspective(600) rotateY(0deg);
     transform-origin: 0 0;
     opacity: .95;
+
     .triangle-left {
         position: absolute;
         left: -12px;
