--- a/client/src/pages/editor/edit-module-hack.scss
+++ b/client/src/pages/editor/edit-module-hack.scss
@@ -19,12 +19,18 @@
     -webkit-overflow-scrolling: touch;
     height: 100%;
 
-    .ec-editor-canvas-inner {
-        background: #fff;
-        width: 750px;
-        min-height: 400px;
-        transform-origin: 50% 0;
-        transform: scale(0.5);
-        box-shadow: 0px 0px 12px 0 #666;
+    .ec-editor-canvas {
+        height: 100%;
+        overflow-y: hidden;
+
+        &-inner {
+            overflow-y: auto;
+            width: 375px * 2;
+            height: 667px * 2;
+            background: #fff;
+            box-shadow: 0px 0px 12px 0 #666;
+            transform-origin: 50% 0;
+            transform: scale(0.5) translate(0, 60px);
+        }
     }
 }
