--- a/client/src/components/control/control.scss
+++ b/client/src/components/control/control.scss
@@ -5,15 +5,11 @@
     background: #9BA5AE;
     pointer-events: none;
     opacity: .5;
+    // z-index: 9999999;
     &-line {
         position: absolute;
         background: #fff;
         pointer-events: visible;
-    }
-
-    &.ec-edit-control-active {
-        .ec-edit-control-line {
-        }
     }
 
     &-top, &-bottom {
@@ -39,6 +35,7 @@
         left: 0;
     }
     .edit-tools{
+        z-index: 999999999;
         width: 60px;
         height: 24px;
         background: #697177;
