--- a/client/src/css/common.scss
+++ b/client/src/css/common.scss
@@ -14,6 +14,14 @@ $bezier-obj: (
     }
 }
 
+@mixin textEllipsis($width) {
+    width: $width;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 /**
  * fixed 属性的编辑模块的通用样式
  */
