--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -3,8 +3,8 @@
 
 ::-webkit-scrollbar-track
 {
-    border-radius: 6px;
-    background-color: #f5f5f5;
+    // border-radius: 6px;
+    background-color: rgba(0,0,0,0.5);
 }
 
 ::-webkit-scrollbar
@@ -16,8 +16,8 @@
 ::-webkit-scrollbar-thumb
 {
     border-radius: 6px;
-    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .5);
-    background-color: #999;
+    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .2);
+    background-color: rgba(0,0,0,0.3);
 }
 
 @keyframes action_scaleOut{
