--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -40,6 +40,8 @@ body {
     position: absolute;
     z-index: 1;
     min-height: 100%;
+    left: 0;
+    top: 0;
     margin: 0 auto;
     width: 100%;
     background: #2B2B2E;
