--- a/client/components/mobile/img/img.scss
+++ b/client/components/mobile/img/img.scss
@@ -3,7 +3,8 @@
     box-sizing: border-box;
     overflow: hidden;
     min-height: 20px;
-    img {
+
+    > img {
         display: block;
         width: 100%;
         // height: 100%;
