--- a/client/src/css/common.scss
+++ b/client/src/css/common.scss
@@ -26,6 +26,7 @@ $bezier-obj: (
  * placeholder
  */
 .editor-placeholder {
+    width: 100%;
     opacity: 0.6;
     pointer-events: none;
     font-size: 30px;
