--- a/client/src/css/common.scss
+++ b/client/src/css/common.scss
@@ -33,6 +33,7 @@ $bezier-obj: (
     z-index: 888;
     opacity: 0.96;
     top: 0;
+    height: 100%;
 
     &-title {
         position: relative;
